[gd_scene load_steps=44 format=3 uid="uid://cxjxaw7n0rt8j"]

[ext_resource type="PackedScene" uid="uid://dpicq5f3m6hjq" path="res://scenes/states.tscn" id="1_c3vuo"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_dm3mn"]
[ext_resource type="Resource" uid="uid://b503j71rer5v2" path="res://resources/player_1_input.tres" id="2_o7nxp"]
[ext_resource type="PackedScene" uid="uid://djrcvgujx2x2c" path="res://scenes/states/idle.tscn" id="4_2y6dn"]
[ext_resource type="PackedScene" uid="uid://cg8e4qtc4vggx" path="res://scenes/states/walk.tscn" id="5_2ceqa"]
[ext_resource type="PackedScene" uid="uid://c4vq2tgkl0ujl" path="res://scenes/states/jump.tscn" id="6_6x4dq"]
[ext_resource type="PackedScene" uid="uid://om6c81aijxej" path="res://scenes/states/fall.tscn" id="7_dp6gk"]
[ext_resource type="PackedScene" uid="uid://ctbxjnhqys5e1" path="res://scenes/states/dash.tscn" id="8_01vqm"]
[ext_resource type="PackedScene" uid="uid://bbs05x1caia2i" path="res://scenes/states/punch.tscn" id="8_55v5u"]
[ext_resource type="PackedScene" uid="uid://bvs76a8t03ks4" path="res://scenes/states/kick.tscn" id="9_fk70v"]
[ext_resource type="PackedScene" uid="uid://ciekrsjelmv3r" path="res://scenes/states/hurt.tscn" id="11_6u7s6"]
[ext_resource type="Texture2D" uid="uid://btndvpkardk4l" path="res://assets/ze.png" id="12_k14ad"]
[ext_resource type="PackedScene" uid="uid://byk7f0msqkt6g" path="res://scenes/states/disintegrate.tscn" id="13_bbhvm"]

[sub_resource type="Curve" id="Curve_1x5sn"]
_data = [Vector2(0.0666667, 0.2), 0.0, 0.0, 0, 0, Vector2(0.266667, 0), 0.0, 0.0, 0, 0, Vector2(0.466667, 0.666667), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 15

[sub_resource type="AtlasTexture" id="AtlasTexture_btdun"]
atlas = ExtResource("12_k14ad")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0ybv"]
atlas = ExtResource("12_k14ad")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_twnks"]
atlas = ExtResource("12_k14ad")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1b1c"]
atlas = ExtResource("12_k14ad")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pepp4"]
atlas = ExtResource("12_k14ad")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj5qx"]
atlas = ExtResource("12_k14ad")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_weawo"]
atlas = ExtResource("12_k14ad")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh25h"]
atlas = ExtResource("12_k14ad")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh8rx"]
atlas = ExtResource("12_k14ad")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qs5h"]
atlas = ExtResource("12_k14ad")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5kln"]
atlas = ExtResource("12_k14ad")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_50wuo"]
atlas = ExtResource("12_k14ad")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncsyk"]
atlas = ExtResource("12_k14ad")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4aocx"]
atlas = ExtResource("12_k14ad")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucw8h"]
atlas = ExtResource("12_k14ad")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0ssb"]
atlas = ExtResource("12_k14ad")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wpy8"]
atlas = ExtResource("12_k14ad")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxr3p"]
atlas = ExtResource("12_k14ad")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4f5h"]
atlas = ExtResource("12_k14ad")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy0j1"]
atlas = ExtResource("12_k14ad")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4umh1"]
atlas = ExtResource("12_k14ad")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ax3w"]
atlas = ExtResource("12_k14ad")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yhtb"]
atlas = ExtResource("12_k14ad")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgg6u"]
atlas = ExtResource("12_k14ad")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlw14"]
atlas = ExtResource("12_k14ad")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0127x"]
atlas = ExtResource("12_k14ad")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_03cas"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btdun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0ybv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twnks")
}],
"loop": false,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1b1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pepp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj5qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weawo")
}],
"loop": false,
"name": &"disintegrate",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh25h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh8rx")
}],
"loop": true,
"name": &"fall",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qs5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5kln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50wuo")
}],
"loop": false,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncsyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4aocx")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucw8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0ssb")
}],
"loop": false,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wpy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxr3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4f5h")
}],
"loop": false,
"name": &"kick",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy0j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4umh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ax3w")
}],
"loop": false,
"name": &"punch",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yhtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgg6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlw14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0127x")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4r017"]
size = Vector2(7, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x56wq"]
size = Vector2(9, 1)

[node name="Ze" type="CharacterBody2D"]
z_index = 1
texture_filter = 1
collision_layer = 0
floor_constant_speed = true
platform_on_leave = 2
script = ExtResource("1_dm3mn")
player_input = ExtResource("2_o7nxp")

[node name="States" parent="." instance=ExtResource("1_c3vuo")]

[node name="Dash" parent="States" instance=ExtResource("8_01vqm")]

[node name="Fall" parent="States" instance=ExtResource("7_dp6gk")]

[node name="Hurt" parent="States" instance=ExtResource("11_6u7s6")]

[node name="Idle" parent="States" instance=ExtResource("4_2y6dn")]

[node name="Jump" parent="States" instance=ExtResource("6_6x4dq")]

[node name="Kick" parent="States" instance=ExtResource("9_fk70v")]
curve = SubResource("Curve_1x5sn")

[node name="Punch" parent="States" instance=ExtResource("8_55v5u")]

[node name="Walk" parent="States" instance=ExtResource("5_2ceqa")]

[node name="Disintegrate" parent="States" instance=ExtResource("13_bbhvm")]

[node name="StateLabel" type="Label" parent="."]
visible = false
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -12.0
offset_top = -17.0
offset_right = 66.0
offset_bottom = 6.0
grow_horizontal = 0
scale = Vector2(0.3, 0.3)
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_alignment = 3
vertical_alignment = 3
uppercase = true

[node name="AnimSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_03cas")
animation = &"fall"
metadata/_aseprite_wizard_config_ = {
"layer": "ze",
"o_ex_p": "",
"o_folder": "res://assets",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "C:/Users/zepqu/Documents/Milees/aseprite_files/characters.ase"
}
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"output_section": true,
"slice_section": true
}

[node name="BodyCollision" type="CollisionPolygon2D" parent="."]
texture_filter = 1
polygon = PackedVector2Array(3, 8, 0, 8, -1, 4, -1, -8, 4, -8, 4, 4)

[node name="PunchArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="PunchCollision" type="CollisionShape2D" parent="PunchArea"]
position = Vector2(-1.5, -0.5)
shape = SubResource("RectangleShape2D_4r017")
disabled = true

[node name="KickArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
input_pickable = false

[node name="KickCollision" type="CollisionShape2D" parent="KickArea"]
position = Vector2(-1.5, 3.5)
shape = SubResource("RectangleShape2D_x56wq")
disabled = true

[node name="BufferInputTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="KickTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="AnimSprite" to="." method="_on_anim_sprite_animation_finished"]
[connection signal="body_entered" from="PunchArea" to="." method="_on_punch_area_body_entered"]
[connection signal="body_entered" from="KickArea" to="." method="_on_kick_area_body_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="KickTimer" to="." method="_on_kick_timer_timeout"]
